--- a/templates/frontend/start/motus.rollstuhl.html.twig
+++ b/templates/frontend/start/motus.rollstuhl.html.twig
@@ -8,17 +8,20 @@
     </div>
 </div>
 <div class="row featurette">
-    <div class="col-5 animation-element slide-left">
+    <div class="col-12 col-md-5 animation-element slide-left">
         <div class="box20">
             <picture>
-                <source srcset="{{ asset('media/motus_web.webp') }}" type="image/webp">
-                <source srcset="{{ asset('media/motus_web.jp2') }}" type="image/jp2">
+                <source srcset="{{ asset('media/motus_web_small.webp') }}" media="(max-width: 575.98px)" type="image/webp">
+                <source srcset="{{ asset('media/motus_web_small.jp2') }}" media="(max-width: 575.98px)" type="image/jp2">
+                <source srcset="{{ asset('media/motus_web_small.jpg') }}" media="(max-width: 575.98px)" type="image/jpg">
+                <source srcset="{{ asset('media/motus_web.webp') }}" media="(min-width: 576px)" type="image/webp">
+                <source srcset="{{ asset('media/motus_web.jp2') }}" media="(min-width: 576px)" type="image/jp2">
                 <img src="{{ asset('media/motus_web.jpg') }}" class="img-fluid mx-auto" />
             </picture>
-            <div class="more">
+            <div class="d-none d-md-inline-block more">
                 <i class="fas fa-info-circle"></i>
             </div>
-            <div class="box-content">
+            <div class="d-none d-md-inline-block box-content">
                 <h3 class="title">Ottobock Motus</h3>
                 <span class="post">Technische Daten:</span>
                 <ul>
@@ -45,14 +48,37 @@
                 </ul>
             </div>
         </div>
-
     </div>
-    <div class="col-7">
+    <div class="col-12 col-md-7">
         <h2 class="featurette-heading">Ottobock Motus</h2>
         <p class="lead">Der Motus ist ein Adaptivrollstuhl, der sich Ihren individuellen Bedürfnissen entsprechend einstellen lässt.
             Die schwenkbaren Fußrasten und die höhenverstellbare Rückenlehne lassen sich schnell verstellen und sorgen so für bequemeres Sitzen (Motus CV).
             Optional erhalten Sie Ihren Motus mit kompaktem, festem Vorderrahmen und durchgehender Fußraste aus Aluminium (Motus CS).
             Übrigens: Transport und Lagerung kann der Motus schnell zusammengelegt werden , das spart Zeit und Energie.</p>
-
+        <p class="d-md-none">
+            <button class="btn btn-link-red" data-toggle="collapse" data-target="#motus-technical">Technische Details <i class="fas fa-caret-down"></i> </button>
+        </p>
+        <ul class="collapse d-md-inline-block" id="motus-technical">
+            <li>Rahmenmaterial 	Aluminium</li>
+            <li>Produktgewicht 	ab 12 kg (abhängig von Optionen)</li>
+            <li>Schwerpunktverstellung 	48 Positionen über Antriebsradadapter einstellbar</li>
+            <li>Max. Benutzergewicht</li>
+            <ul>
+                <li>125 kg (bis SB 480 mm)</li>
+                <li>140 kg (ab SB 505 mm)</li>
+            </ul>
+            </li>
+            <li>Rückenhöhe 	300–500 mm</li>
+            <li>Sitzbreite 	355–555 mm</li>
+            <li>Sitztiefe 	360–540 mm</li>
+            <li>Unterschenkellänge 	340–520 mm</li>
+            <li>Breite
+                <ul>
+                    <li>Antriebsrad mit Kniehebelbremse 520–720 mm</li>
+                    <li>Antriebsrad mit Trommelbremse 555–755 mm</li>
+                </ul>
+            </li>
+            <li>Länge 	805–1110 mm</li>
+        </ul>
     </div>
 </div>
