--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -5,10 +5,25 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <title>{% block title %}Mobilit&auml;t - weil dabei sein wichtig ist!{% endblock %}</title>
         {% block stylesheets %}
-           <link rel="stylesheet" href="{{ asset('build/global.css.gz') }}">
+           <link rel="stylesheet" href="{{ asset('build/global.css') }}">
+        {% endblock %}
+        {% block gtm_script %}
+        <!-- Google Tag Manager -->
+        <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+                    new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+                j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+                'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+            })(window,document,'script','dataLayer','GTM-TJR8W4Z');</script>
+        <!-- End Google Tag Manager -->
         {% endblock %}
     </head>
     <body>
+        {% block gtm_body %}
+        <!-- Google Tag Manager (noscript) -->
+        <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-TJR8W4Z"
+                          height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+        <!-- End Google Tag Manager (noscript) -->
+        {% endblock %}
         <div class="siegel d-none d-md-flex">
             <picture>
                 <source srcset="{{ asset('media/testsiegel_web.webp') }}" type="image/webp">
@@ -18,8 +33,8 @@
         </div>
         {% block body %}{% endblock %}
         {% block javascripts %}
-            <script type="text/javascript" src="{{ asset('build/runtime.js.gz') }}"></script>
-           <script type="text/javascript" src="{{ asset('build/app.js.gz') }}"></script>
+            <script type="text/javascript" src="{{ asset('build/runtime.js') }}"></script>
+           <script type="text/javascript" src="{{ asset('build/app.js') }}"></script>
         {% endblock %}
     </body>
 </html>
