--- a/templates/frontend/start/colibri.scooter.html.twig
+++ b/templates/frontend/start/colibri.scooter.html.twig
@@ -8,17 +8,20 @@
     </div>
 </div>
 <div class="row featurette">
-    <div class="col-5 animation-element slide-left">
+    <div class="col-12 col-md-5 animation-element slide-left">
         <div class="box20">
             <picture>
-                <source srcset="{{ asset('media/colibri_web.webp') }}" type="image/webp">
-                <source srcset="{{ asset('media/colibri_web.jp2') }}" type="image/jp2">
+                <source srcset="{{ asset('media/colibri_web_small.webp') }}" media="(max-width: 575.98px)" type="image/webp">
+                <source srcset="{{ asset('media/colibri_web_small.jp2') }}" media="(max-width: 575.98px)" type="image/jp2">
+                <source srcset="{{ asset('media/colibri_web_small.jpg') }}" media="(max-width: 575.98px)" type="image/jpg">
+                <source srcset="{{ asset('media/colibri_web.webp') }}" media="(min-width: 576px)" type="image/webp">
+                <source srcset="{{ asset('media/colibri_web.jp2') }}" media="(min-width: 576px)" type="image/jp2">
                 <img src="{{ asset('media/colibri_web.jpg') }}" class="img-fluid mx-auto" />
             </picture>
-            <div class="more">
+            <div class="d-none d-md-inline-block more">
                 <i class="fas fa-info-circle"></i>
             </div>
-            <div class="box-content">
+            <div class="d-none d-md-inline-block box-content">
                 <h3 class="title">ELEKTROMOBIL COLIBRI<sup>&reg;</sup></h3>
                 <span class="post">Technische Daten:</span>
                 <ul>
@@ -35,21 +38,37 @@
             </div>
         </div>
     </div>
-    <div class="col-7">
+    <div class="col-12 col-md-7">
         <h2 class="featurette-heading">ELEKTROMOBIL COLIBRI<sup>&reg;</sup></h2>
         <p class="lead">Das Elektromobil Colibri&reg; von Invacare ist besonders
             wendig und im Handumdrehen ohne Werkzeug für den
             Transport in Ihrem Auto zerlegbar. Verschiedene Farbvarianten
             sind auswählbar.</p>
-        <div class="d-flex justify-content-start">
-            <p class="lead text-red"><strong>Serienmäßige Ausstattung:</strong></p>
+        <p class="d-md-none">
+            <button class="btn btn-link-red" data-toggle="collapse" data-target="#colibri-content">Ausstattung <i class="fas fa-caret-down"> </i> </button>
+            <button class="btn btn-link-red" data-toggle="collapse" data-target="#colibri-technical">Technische Details <i class="fas fa-caret-down"> </i> </button>
+        </p>
+        <div class="d-none d-md-flex justify-content-md-between">
+            <p class="lead text-red"><strong>Serienm&auml;&szlig;ige Ausstattung</strong></p>
+            <p class="lead text-red d-md-none"><strong>Technische Details</strong></p>
         </div>
-        <div class="d-flex justify-content-start">
-            <ul>
+        <div class="d-md-inline-block justify-content-md-between">
+            <ul class="collapse" id="colibri-content">
                 <li>Ladestandsanzeige</li>
                 <li>Bequemer Sitz</li>
                 <li>Batterieladegerät</li>
                 <li>Inkl. Einkaufskorb vorn</li>
+            </ul>
+            <ul class="collapse d-md-inline-block" id="colibri-technical">
+                <li>Max. Nutzlast 136 kg</li>
+                <li>Reichweite 16 km</li>
+                <li>Geschwindigkeit 6 km/h</li>
+                <li>Gewicht 44 kg</li>
+                <li>Sitztiefe 40 cm</li>
+                <li>Sitzhöhe 37-42 cm</li>
+                <li>Rückenlehne 38,5 cm</li>
+                <li>Gesamtbreite 50,5 cm</li>
+                <li>Motorleistung 200 W</li>
             </ul>
         </div>
     </div>
