--- a/templates/frontend/start/orion.scooter.html.twig
+++ b/templates/frontend/start/orion.scooter.html.twig
@@ -8,17 +8,20 @@
     </div>
 </div>
 <div class="row featurette">
-    <div class="col-5 animation-element slide-left">
+    <div class="col-12 col-md-5 animation-element slide-left">
         <div class="box20">
             <picture>
-                <source srcset="{{ asset('media/orion_web.webp') }}" type="image/webp">
-                <source srcset="{{ asset('media/orion_web.jp2') }}" type="image/jp2">
+                <source srcset="{{ asset('media/orion_web_small.webp') }}" media="(max-width: 575.98px)" type="image/webp">
+                <source srcset="{{ asset('media/orion_web_small.jp2') }}" media="(max-width: 575.98px)" type="image/jp2">
+                <source srcset="{{ asset('media/orion_web_small.jpg') }}" media="(max-width: 575.98px)" type="image/jpg">
+                <source srcset="{{ asset('media/orion_web.webp') }}" media="(min-width: 576px)" type="image/webp">
+                <source srcset="{{ asset('media/orion_web.jp2') }}" media="(min-width: 576px)" type="image/jp2">
                 <img src="{{ asset('media/orion_web.jpg') }}" class="img-fluid mx-auto" />
             </picture>
-            <div class="more">
+            <div class="d-none d-md-inline-block more">
                 <i class="fas fa-info-circle"></i>
             </div>
-            <div class="box-content">
+            <div class="d-none d-md-inline-block box-content">
                 <h3 class="title">ELEKTROMOBIL ORION<sup>&reg;</sup></h3>
                 <span class="post">Technische Daten:</span>
                 <ul>
@@ -35,15 +38,19 @@
             </div>
         </div>
     </div>
-    <div class="col-7">
+    <div class="col-12 col-md-7">
         <h2 class="featurette-heading">ELEKTROMOBIL ORION<sup>&reg;</sup></h2>
         <p class="lead">Das Elektromobil Orion Pro ist ideal für größere Unternehmungen
             und mit 6 km/h und 10 km/h erhältlich.</p>
-        <div class="d-flex justify-content-start">
+        <p class="d-md-none">
+            <button class="btn btn-link-red" data-toggle="collapse" data-target="#orion-content">Ausstattung <i class="fas fa-caret-down"> </i> </button>
+            <button class="btn btn-link-red" data-toggle="collapse" data-target="#orion-technical">Technische Details <i class="fas fa-caret-down"> </i> </button>
+        </p>
+        <div class="d-none d-md-flex justify-content-start">
             <p class="lead text-red"><strong>Serienmäßige Ausstattung:</strong></p>
         </div>
-        <div class="d-flex justify-content-start">
-            <ul>
+        <div class="d-md-inline-block justify-content-start">
+            <ul class="collapse" id="orion-content">
                 <li>Korb vorne</li>
                 <li>Rückspiegel links</li>
                 <li>Doppelscheinwerfer</li>
@@ -55,7 +62,17 @@
                 <li>Entriegelungshebel</li>
                 <li>Kurvendrosselung vorn</li>
             </ul>
-
+            <ul class="collapse d-md-inline-block" id="orion-technical">
+                <li>Max. Nutzlast 136 kg</li>
+                <li>Reichweite 43 km</li>
+                <li>Geschwindigkeit 6 km/h oder 10 km/h</li>
+                <li>Gewicht 110 kg</li>
+                <li>Sitzbreite 51 cm</li>
+                <li>Sitztiefe 47 cm</li>
+                <li>Sitzhöhe 44-51 cm</li>
+                <li>Rückenlehne 50 cm</li>
+                <li>Wenderadius 260 cm</li>
+            </ul>
         </div>
     </div>
 </div>
