--- a/templates/frontend/start/server.rollator.html.twig
+++ b/templates/frontend/start/server.rollator.html.twig
@@ -1,39 +1,46 @@
 <div class="row my-2">
-    <div class="col-5 animation-element slide-left">
+    <div class="col-12 col-md-5 animation-element slide-left">
         <div class="bg-lightblue slider-left">
             <div class="header">
                 <h3 class="text-uppercase p-3">Server</h3>
             </div>
         </div>
     </div>
-    <div class="col-7">
+    <div class="d-none d-md-inline-flex col-md-7">
         <div class="sub-header">
             <h4 class="text-uppercase p-3 info text-right bg-lightblue">Stylisch &amp; sehr funktionell</h4>
         </div>
     </div>
 </div>
 <div class="row featurette">
-    <div class="col-5 animation-element slide-left">
+    <div class="col-12 col-md-5 animation-element slide-left">
         <picture>
-            <source srcset="{{ asset('media/server_front_web.webp') }}" type="image/webp">
-            <source srcset="{{ asset('media/server_front_web.jp2') }}" type="image/jp2">
+            <source srcset="{{ asset('media/server_front_web_small.webp') }}" media="(max-width: 575.98px)" type="image/webp">
+            <source srcset="{{ asset('media/server_front_web_small.jp2') }}" media="(max-width: 575.98px)" type="image/jp2">
+            <source srcset="{{ asset('media/server_front_web_small.jpg') }}" media="(max-width: 575.98px)" type="image/jpg">
+            <source srcset="{{ asset('media/server_front_web.webp') }}" media="(min-width: 576px)" type="image/webp">
+            <source srcset="{{ asset('media/server_front_web.jp2') }}" media="(min-width: 576px)" type="image/jp2">
             <img src="{{ asset('media/server_front_web.jpg') }}" class="img-fluid mx-auto" />
         </picture>
     </div>
-    <div class="col-7">
+    <div class="col-12 col-md-7">
         <h2 class="featurette-heading">Rollator Server</h2>
         <p class="lead">Der Server ist das Einstiegsmodell in die Rehasense-Serie. Er ist wendig, stabil und höhenverstellbar.<br><u>Praktisches Extra:</u> die abnehmbare Einkaufstasche.</p>
-        <div class="d-flex justify-content-between">
+        <p class="d-md-none">
+            <button class="btn btn-link-red" data-toggle="collapse" data-target="#router-delivery">Lieferumfang <i class="fas fa-caret-down"></i> </button>
+            <button class="btn btn-link-red" data-toggle="collapse" data-target="#router-technical">Technische Details <i class="fas fa-caret-down"></i> </button>
+        </p>
+        <div class="d-none d-md-flex justify-content-md-between">
             <p class="lead text-red"><strong>Lieferumfang</strong></p>
             <p class="lead text-red"><strong>Technische Details:</strong></p>
         </div>
-        <div class="d-flex justify-content-between">
-            <ul>
+        <div class="d-md-flex justify-content-md-between">
+            <ul class="collapse d-md-inline-block" id="router-delivery">
                 <li>Ankipphilfe</li>
                 <li>Einkaufstasche</li>
                 <li>Stockhalter</li>
             </ul>
-            <ul>
+            <ul class="collapse d-md-inline-block" id="router-technical">
                 <li>Gewicht 6,7 - 7,0 kg</li>
                 <li>Max. Nutzlast 150 kg</li>
                 <li>Sitzhöhe 50 - 62 cm</li>
