--- a/templates/frontend/start/zenit_r.rollstuhl.html.twig
+++ b/templates/frontend/start/zenit_r.rollstuhl.html.twig
@@ -7,18 +7,22 @@
         </div>
     </div>
 </div>
-<div class="row featurette my-2">
-    <div class="col-5 animation-element slide-left">
+<div class="row featurette">
+    <div class="col-12 col-md-5 animation-element slide-left">
         <div class="box20 py-4">
             <picture>
-                <source srcset="{{ asset('media/zenit_r_web.webp') }}" type="image/webp">
-                <source srcset="{{ asset('media/zenit_r_web.jp2') }}" type="image/jp2">
+                <source srcset="{{ asset('media/zenit_r_web_small.webp') }}" media="(max-width: 575.98px)" type="image/webp">
+                <source srcset="{{ asset('media/zenit_r_web_small.jp2') }}" media="(max-width: 575.98px)" type="image/jp2">
+                <source srcset="{{ asset('media/zenit_r_web_small.jpg') }}" media="(max-width: 575.98px)" type="image/jpg">
+                <source srcset="{{ asset('media/zenit_r_web.webp') }}" media="(min-width: 576px)" type="image/webp">
+                <source srcset="{{ asset('media/zenit_r_web.jp2') }}" media="(min-width: 576px)" type="image/jp2">
                 <img src="{{ asset('media/zenit_r_web.jpg') }}" class="img-fluid mx-auto py-4" />
             </picture>
-            <div class="more">
+            <div class="d-none d-md-inline-block more">
                 <i class="fas fa-info-circle"></i>
             </div>
-            <div class="box-content">
+            <div class="d-none d-md-inline-block box-content">
+                <h3 class="title">Ottobock Zenit R</h3>
                 <span class="post">Technische Daten:</span>
                 <ul>
                     <li>Sitzbreite 	320 – 460 mm</li>
@@ -38,8 +42,26 @@
             </div>
         </div>
     </div>
-    <div class="col-7">
+    <div class="col-12 col-md-7">
         <h2 class="featurette-heading">Ottobock Zenit R</h2>
         <p class="lead">Kompromisslos, effizient, individuell – Zenit R! Gewichtsoptimierte Komponenten und verbesserte Starrrahmeneigenschaften setzen jeden deiner Kraftimpulse direkt in Bewegung um, was die Qualität des Fahrverhaltens enorm steigert. Zahlreiche Einstellmöglichkeiten erlauben zudem eine optimale Anpassung für noch mehr Komfort und machen den Zenit R zu einem Aktivrollstuhl ohne Kompromisse.</p>
+        <p class="d-md-none">
+            <button class="btn btn-link-red" data-toggle="collapse" data-target="#zenit-r-technical">Technische Details <i class="fas fa-caret-down"></i> </button>
+        </p>
+        <ul class="collapse d-md-inline-block" id="zenit-r-technical">
+            <li>Sitzbreite 	320 – 460 mm</li>
+            <li>Sitztiefe 	360 – 500 mm</li>
+            <li>Sitzhöhe vorn 	380 – 540 mm</li>
+            <li>Sitzhöhe hinten 	370 – 500 mm</li>
+            <li>Rückenhöhe 	250 – 500 mm</li>
+            <li>Unterschenkellänge 	280 – 510 mm</li>
+            <li>Vorderrahmenwinkel 	75° / 85°</li>
+            <li>Gesamtbreite 	495 – 710 mm</li>
+            <li>Gesamtlänge 	640 – 1.040 mm</li>
+            <li>Gesamthöhe 	620 – 1.050 mm</li>
+            <li>Max. Zuladung 	120 kg</li>
+            <li>Gewicht 	ab ca. 8,5 kg</li>
+            <li>Transportgewicht (ohne Antriebsräder) 	ab ca. 6,0 kg</li>
+        </ul>
     </div>
 </div>
